--- a/redis/templates/default/redis_sentinel.service.j2
+++ b/redis/templates/default/redis_sentinel.service.j2
@@ -5,8 +5,8 @@ Documentation=http://redis.io/documentation, man:redis-sentinel(1)
 
 [Service]
 Type={{ 'forking' if redis_daemonize == 'yes' else 'simple' }}
-ExecStart={{ redis_install_dir }}/bin/redis-server /etc/redis/sentinel_{{ redis_sentinel_port }}.conf --sentinel
-EnvironmentFile=-/etc/default/sentinel_{{ redis_sentinel_port }}
+ExecStart={{ redis_install_dir }}/bin/redis-server /data/redis/etc/redis/sentinel_{{ redis_sentinel_port }}.conf --sentinel
+EnvironmentFile=-/data/redis/etc/default/sentinel_{{ redis_sentinel_port }}
 PIDFile={{ redis_sentinel_pidfile }}
 TimeoutStopSec=0
 Restart=always
@@ -29,7 +29,7 @@ CapabilityBoundingSet=~CAP_SYS_PTRACE
 # redis-sentinel writes its own config file so we allow writing there (NB.
 # ProtectSystem=true over ProtectSystem=full)
 ProtectSystem=true
-ReadWriteDirectories=-/etc/redis
+ReadWriteDirectories=-/data/redis/etc/redis
 
 [Install]
 WantedBy=multi-user.target
